--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "orders-ms"]
 	path = orders-ms
 	url = https://github.com/CleinerMQ/orders-ms.git
+[submodule "payments-ms"]
+	path = payments-ms
+	url = https://github.com/CleinerMQ/payments-ms.git
+[submodule "auth-ms"]
+	path = auth-ms
+	url = https://github.com/CleinerMQ/auth-ms.git
