--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,3 +79,20 @@ services:
       - STRIPE_ENDPOINTSECRET=${PAYMENTS_MS_PORT_STRIPE_ENDPOINTSECRET}
 
 
+#==========================
+#Auth Microservice
+#==========================
+  auth-ms:
+    build: ./auth-ms
+    volumes:
+      - ./auth-ms/src:/usr/src/app/src
+      - ./auth-ms/prisma:/usr/src/app/prisma
+      # Excluir node_modules del volumen para evitar conflictos
+      - /usr/src/app/node_modules
+    command: sh -c "npx prisma generate && npm run start:dev"
+    environment:
+      - PORT=4004
+      - NATS_SERVERS=nats://nats-server:4222
+      - DATABASE_URL=${AUTH_DATABASE_URL}
+      - JWT_SECRET=${JWT_SECRET}
+      
